[DOC] Cohesion blocks

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -355,3 +355,21 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://github.com/prometheus/blackbox_exporter} (accessed at 18/04/2022)},
 	title        = {{B}lackbox exporter},
 }
+
+@misc{Pandas,
+	author       = {{Pandas community}},
+	howpublished = {\url{https://pandas.pydata.org/} (accessed at 24/04/2022)},
+	title        = {pandas - {P}ython {D}ata {A}nalysis {L}ibrary},
+}
+
+@misc{Plotly,
+	author       = {{Plotly}},
+	howpublished = {\url{https://plotly.com/python/} (accessed at 24/04/2022)},
+	title        = {{P}lotly {P}ython {G}raphing {L}ibrary},
+}
+
+@misc{JupyterNotebook,
+	author       = {{Jupyter}},
+	howpublished = {\url{https://jupyter.org/} (accessed at 24/04/2022)},
+	title        = {{P}roject {J}upyter},
+}
