--- a/docs/content/related-works.tex
+++ b/docs/content/related-works.tex
@@ -1,3 +1,8 @@
 %----------------------------------------------------------------------------
 \chapter{Related Works}
 %----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item Gremlin?
+	\item netflix chaos monkey
+\end{itemize}
