--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -5,7 +5,20 @@
 This chapter presents the design and implementation of the test framework that facilitates the automatic deployment of the sample application and running the measurements to determine the dependability metrics of the system.
 
 %----------------------------------------------------------------------------
-\section{Design}
+\section{Introduction}
+%----------------------------------------------------------------------------
+
+Now, that the sample application is ready, it is time to examine its robustness. The goals of the thesis project included measuring the dependability of the sample application with optional fault injection to simulate possible real-world anomalies. The following sections present the aspects of the design and the construction of a framework that enables collecting dependability metrics and injecting failure scenarios into the sample application (see Section \ref{test-framework-design}). As a result these considerations, a test framework was created using various technologies (Python, Chaos Mesh, Prometheus, Jenkins, etc.) that can be used to conduct highly configurable and reproducible dependability analyses of the sample application. The implementation of the framework is discussed in details in Section \ref{test-framework-impl}. The created framework was then used to execute initial measurements determining the characteristics of the system in its original state (see Section \ref{baseline-results}).
+
+%\begin{itemize}
+%	\item what do we want? - measure the dependability of the application and inject faults into the system in an automated way
+%	\item what are the goals?
+%	\item lets create a framework - design and implement a tool that enables to constantly monitor the state of the system under test, collect dependability metrics and introduce different kinds of anomalies into the system
+%	\item try it out - baseline measurements
+%\end{itemize}
+
+%----------------------------------------------------------------------------
+\section{Design} \label{test-framework-design}
 %----------------------------------------------------------------------------
 
 Consistency is essential when testing. In order to get meaningful results that can be later used to evaluate the implementation and to draw conclusions, a well defined framework is needed that sets clear boundaries on how the results are acquired. The quality of the testing and measurement greatly depends on the way these activities are executed, which means that a detailed design of the framework is vital.
@@ -187,7 +200,7 @@ There are a lot of metrics that the monitoring system can collect. Apart from th
 These metrics were chosen because they acceptably describe the dependability characteristics of a cloud based system that is designed to function continuously. 
 
 %----------------------------------------------------------------------------
-\section{Implementation}
+\section{Implementation} \label{test-framework-impl}
 %----------------------------------------------------------------------------
 
 %\begin{itemize}
@@ -835,7 +848,7 @@ Using the services of a public cloud provider has an important consequence that 
 
 After finalizing the application and the framework, the baseline measurement sequences were executed for each of the fault profiles described in Section \ref{test-impl-fault-profiles}, excluding the \texttt{Custom} profile. The load generation lasted 5 minutes (for practical reasons) in case of all the measurement sequences and count of the measurements in a sequence were adaptively determined as explained in Section \ref{test-impl-measurement-seq}. 
 
-The baseline results are presented in Figure \ref{fig:baseline_results}. The values can be seen on a bar chart, where the different metrics are grouped together. In order to make the diagram more comprehensible, three dependability metrics (MUT, MDT, MTBF) are normalized with the duration of the load generation in each measurement and their names are prefixed with "rel\_" to reflect this change. This way all the results presented on the diagram have values between 0 and 1 (inclusive).
+The baseline results are presented in Figure \ref{fig:baseline_results} -- the diagram was created with the Python Pandas \cite{Pandas} and Plotly \cite{Plotly} libraries using the Jupyter Notebook \cite{JupyterNotebook} technology. The values can be seen on a bar chart, where the different metrics are grouped together. In order to make the diagram more comprehensible, three dependability metrics (MUT, MDT, MTBF) are normalized with the duration of the load generation in each measurement and their names are prefixed with "rel\_" to reflect this change. This way all the results presented on the diagram have values between 0 and 1 (inclusive).
 
 \begin{figure}[h]
 	\centering
