--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -132,7 +132,7 @@
 
 @techreport{AboveTheClouds,
 	author       = {Michael Armbrust and Armando Fox and Rean Griffith and Anthony D. Joseph and Randy Katz and Andy Konwinski and Gunho Lee and David Patterson and Ariel Rabkin and Ion Stoica and Matei Zaharia},
-	title        = {Above the Clouds: A Berkeley View of Cloud Computing},
+	title        = {Above the Clouds: A {B}erkeley {V}iew of {C}loud {C}omputing},
 	institution  = {UC Berkeley Reliable Adaptive Distributed Systems Laboratory},
 	year         = {2009},
 	month        = {February}
@@ -373,3 +373,10 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://jupyter.org/} (accessed at 24/04/2022)},
 	title        = {{P}roject {J}upyter},
 }
+
+@misc{SaaSWikipedia,
+	author       = {{Wikipedia}},
+	howpublished = {\url{https://en.wikipedia.org/wiki/Software_as_a_service} (accessed at 25/04/2022)},
+	title        = {{S}oftware as a service},
+}
+
